Reversed the right to left input of digits to ltr to fix symbol error showing up behind numbers when entered.

--- a/calculator.css
+++ b/calculator.css
@@ -58,7 +58,7 @@ h1 {
 	background-color: #79A7B9;
 	box-shadow: inset 0 4px 0 #628795;
 	color: #fff;
-	direction: rtl;
+	/*direction: rtl;*/
 }
 #display:hover,
 #display:focus {
@@ -142,9 +142,9 @@ h1 {
 
 .navigation a:hover,
 .navigation a:focus {
-  background: 
+  background:
     linear-gradient(
-      to bottom right, 
+      to bottom right,
       rgba(139,125,239, 0.65), rgba(59,153,239, .65)
     );
 }
